fixed the button size on mobile devices - need to fix tablet buttons

--- a/css/main.css
+++ b/css/main.css
@@ -160,7 +160,7 @@ a {
 	color: #fff;
 	font-family: sans-serif;
 	height: 60px;
-	width: 130px;
+	width: 110px;
 	text-align: center;
 	border: 0;
 	margin-bottom: 1em;
@@ -439,6 +439,9 @@ input[type=submit]:hover {
 		padding-left: 10em;
 		padding-right: 10em;
 		height: 600px;
+	}
+	.button {
+		width: 125px;
 	}
 	/*Contact*/
 	.contact {
